[build-system]
requires        = ["flit_core >=3.2,<4"]
build-backend   = "flit_core.buildapi"

[project]
name            = "pekyll"
readme          = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"
license         = {file = "LICENSE"}
authors         = [{name = "sina Kim", email = "sinabero3271@kakao.com"}]
maintainers     = [
    {name = "sina Kim",  email = "sinabero3271@kakao.com"},
    {name = "Taehun Gu", email = "ddr04099@gmail.com"}
]
keywords        = ["python", "static", "site", "web", "generator"]
classifiers     = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies    = [
    # "requests >=2.6"
    # "
]
dynamic = ['version', 'description']

[project.urls]
# Use any names inside it
Home            = "https://github.com/sina-Kim/pekyll"

[project.scripts]
pekyll          = "pekyll:main"
